# VkRenderKit

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
code/: app.hpp  deviceWrapper.cpp  geometry.cpp  geometry.hpp  header.hpp  main.cpp  pipelineWrapper.cpp  vulkanContext.cpp  vulkanContext.hpp
